# Outside-be2

./: .env.sample  README.md  index.html  main.py  pyproject.toml
docker/: .dockerignore  Dockerfile
migrations/models/: 0_20250923190552_init.py
src/apps/auth/: __init__.py
src/apps/auth/models/: permission.py  user.py
src/apps/auth/routes/: user.py
src/apps/auth/schemas/: permission.py  user.py
src/apps/auth/services/: user.py
src/apps/event/: __init__.py  models.py  routes.py  schemas.py  services.py
src/apps/file/: __init__.py  routes.py  services.py
src/apps/kyc/: __init__.py  models.py
src/apps/ticket/: __init__.py  models.py
src/apps/transaction/models/: __init__.py  payin.py  payout.py
src/config/: env.py
src/core/: database.py  models.py  routers.py
src/dependencies/: permission.py
src/enums/: base.py
src/libs/buckets/: cloudinary.py
src/libs/http/: base.py
src/libs/mail/: smtp.py
src/scripts/: aerich.py  seed.py  server.py
src/services/: jwt.py
src/utilities/: base_model.py  crypto_func.py  errorHandler.py  hash.py  id_gen.py  route_builder.py
